# bone-fracture-detector

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-api.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
backend/: main.py
docs/: presentation_script.md  project_report.md
fracture_detector/: __init__.py  config.py  detector.py  errors.py  imaging.py  model_manager.py  schemas.py
frontend/: app.py
models/: README.md
notebooks/: 01_colab_train_and_evaluate.ipynb
reports/: README.md  data_audit.json  metrics.csv  metrics.json
scripts/: audit_dataset.py  create_eda_figures.py  download_dataset.py  evaluate.py  prepare_detection_dataset.py  train.py
tests/: conftest.py  test_api.py  test_detector.py  test_imaging.py  test_prepare_detection_dataset.py
