[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bone-fracture-detector"
version = "1.0.0"
description = "FastAPI + Streamlit service for educational X-ray fracture detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pillow>=10,<12",
  "pydantic>=2.7,<3",
  "python-multipart>=0.0.9,<1",
  "requests>=2.31,<3",
  "streamlit>=1.38,<2",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
ml = [
  "kaggle>=1.6.17,<3",
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "pyyaml>=6,<7",
  "ultralytics>=8.3,<9",
]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
include = ["fracture_detector*", "backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
